<resources>
    <string name="app_name" translatable="false">निपुण लक्ष्य</string>
    <string name="unexpected_error_occured">एक अप्रत्याशित त्रुटि आई और ऐप को रोक दिया गया। एप्लिकेशन को पुनः आरंभ करने के लिए कृपया नीचे दिए गए बटन पर क्लिक करें।</string>
    <string name="unexpected_error_read_along">"ऐसा लगता है कि Read Along परीक्षण पूरा नहीं किया जा सका। कृपया पुन: प्रयास करें"</string>
    <string name="oh_no">ओह हो!</string>
    <string name="let_s_start_again">फिर से शुरू करें</string>
    <string name="screen_congrats">" आपने आज का प्रैक्टिस पूरा कर लिया हैं!\nहर दिन प्रैक्टिस करते रहो !"</string>
    <string name="register_hrms_message">अपनी मानव सम्पदा ID पंजीकृत करें</string>
    <string name="assessment_home_screen">Assessment Home Screen</string>
    <string name="setup_new_assessment"> अभ्यास शुरू करें।  </string>
    <string name="setup_new_assessment_landing_page"> विद्यार्थी आकलन </string>
    <string name="teacher_assessment_summary_label"> शिक्षक आकलन सारांश </string>
    <string name="examiner_assessment_summary_label"> परीक्षक आकलन सारांश </string>
    <string name="school_assessment_summary_label">विद्यालय के सभी आकलन का सारांश</string>
    <string name="setup_new_assessment_user_home">आँकलन शुरू करें।</string>
    <string name="setup_new_assessment_examiner_home">आकलन करें !</string>
    <string name="mentor_profile">मेंटर प्रोफ़ाइल</string>
    <string name="teacher_profile">शिक्षक प्रोफाइल</string>
    <string name="your_assessment_overview">Assessment Overview</string>
    <string name="knowledge_section">Knowledge section</string>
    <string name="spot_assessment_">Spot Assessment</string>
    <string name="name">नाम : \u0020\u0020%s</string>
    <string name="teacher_name">नाम : \u0020\u0020%s</string>
    <string name="designation">पद : \u0020\u0020%s</string>
    <string name="udise_string">UDISE : \u0020\u0020%s</string>
    <string name="district">जनपद : \u0020\u0020%s</string>
    <string name="block">ब्लॉक : \u0020\u0020%s</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="logout">Logout</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="start_practice_session">Start practice session</string>
    <string name="not_now">Not now</string>
    <string name="are_you_sure_want_to_logout">Are you sure you want to log out?</string>
    <string name="help">Help Section</string>
    <string name="profile">Profile</string>
    <string name="verify_pin">Verify pin</string>
    <string name="search_by_udice_code">स्कूल UDISE Code सर्च करें।</string>
    <string name="rural">Rural</string>
    <string name="urban">Urban</string>
    <string name="select_school_to_start_visit">Select school to start visit</string>
    <string name="remove_schools_already_visited">विज़िट किये गए स्कूलों को छोड़ दें</string>
    <string name="student_result">%s result</string>
    <string name="according_to_success_target">According to success target</string>
    <string name="assessment_text">Assessment</string>
    <string name="please_select_the_class">आंकलन के लिए कक्षा चुने</string>
    <string name="what_subject_do_you_want_to_practice"><b>आंकलन के लिए विषय चुने</b>\n(एक बार में एक ही विषय चुना जा सकता है)</string>
    <string name="selected_grade_and_subject">Selected Grade and Subject</string>
    <string name="choose_another_school">दूसरा विद्यालय चुने</string>
    <string name="select_no_of_student">कितने विद्यार्थियों का आंकलन करना चाहते हैं</string>
    <string name="student_sitting_in_front_of_you">मूल्यांकन शुरू होने जा रहा है। क्या छात्र आपके सामने बैठा है?</string>
    <string name="correct_words">"%d सही शब्द</string>
    <string name="words_per_minute">"%d शब्द सही पढ़े (प्रति मिनट)</string>
    <string name="well_done_lets_proceed">बहुत बढ़िया %s, चलिए आगे बढ़ते हैं!</string>
    <string name="correct_answers">"%d%% सही उत्तर "</string>
    <string name="score_card">स्कोर कार्ड</string>
    <string name="assessment_ended_toolbar">Assessment Ended</string>
    <string name="test_next_student">अब अगले विद्यार्थी का टेस्ट करें</string>
    <string name="take_screen_shot_of_result">विद्यार्थियों  को प्रेरक बनाने के लिए इस स्कोर कार्ड के स्क्रीनशॉट को शिक्षक के साथ शेयर करें</string>
    <string name="second_spot_assessment">Start another assessment</string>
    <string name="go_home">होम स्क्रीन पर जाएँ।  </string>
    <string name="words_read_correct">शब्द सही पढ़े\n(प्रति मिनट)</string>
    <string name="correct_answers_of_questions">सवालों के\nसही जवाब</string>
    <string name="completed_assessment_with_students">आपने ‘%s’ विद्यार्थियों  का आंकलन पूरा किया</string>
    <string name="completed_assessment_with_one_student">आपने ‘%s’ विद्यार्थी  का आंकलन पूरा किया</string>
    <string name="submit_result">Submit Result</string>
    <string name="visited">Visited</string>
    <string name="not_visited">Not\nVisited</string>
    <string name="school_name">विद्यालय :\u0020</string>
    <string name="school_name_top_banner">विद्यालय :\u0020%s</string>
    <string name="district_name_top_banner">जनपद  :\u0020%s</string>
    <string name="block_name_top_banner">ब्लॉक :\u0020%s</string>
    <string name="udise_">UDISE : \u0020</string>
    <string name="udise_top_banner">UDISE :\u0020%s</string>
    <string name="_min">%s Mins</string>
    <string name="_min_one">%s Min</string>
    <string name="min_one"> Min</string>
    <string name="please_select_no_of_students_or_competency">कृपया पहले दक्षता चुनें</string>
    <string name="competency">दक्षता</string>
    <string name="students">Students</string>
    <string name="assessment_canceled">असेसमेंट रद्द</string>
    <string name="total_time_taken">कुल समय : %s</string>
    <string name="instruction">विषय सम्बन्धी निर्देश</string>
    <string name="assessment_compete">आंकलन\nसमाप्त</string>
    <string name="error_unable_to_sync">डेटा सिंक नहीं हुआ, कृपया बाद में पुन: प्रयास करें।</string>
    <string name="data_sync_successful">डेटा सफलतापूर्वक सिंक हो गया!</string>
    <string name="data_sync_background">डेटा बैकग्राउंड में सिंक होगा</string>
    <string name="sync">डेटा सिंक करें</string>
    <string name="grade_1_students">आंकलन कक्षा 1 में पूरे किये</string>
    <string name="grade_2_students">आंकलन कक्षा 2 में पूरे किये</string>
    <string name="grade_3_students">आंकलन कक्षा 3 में पूरे किये</string>
    <string name="grade_wise_overview">कक्षावार अवलोकन</string>
    <string name="schools_visited">विद्यालय के आंकलन पूरे किये</string>
    <string name="visits_overview">आंकलन अवलोकन</string>
    <string name="students_assessed">छात्रों ने आंकलन पूरे किये</string>
    <string name="average_time_per_assessment">औसत समय प्रति आंकलन</string>
    <string name="data_is_already_updated">डेटा पहले से ही सिंक है</string>
    <string name="attention">कृपया ध्यान दें</string>
    <string name="sync_data_before_logout">आपके ऍप पर सिंक करने के लिए डेटा है। हम डेटा सिंक कर आपको लॉगआउट करेंगे</string>
    <string name="session_not_completed">Not completed</string>
    <string name="bolo_instructions"><![CDATA[<b>मेंटर के लिए अनुदेश:</b>\n \nयह आंकलन \'Read Along\' ऐप के द्वारा होगा। आगे बढ़ने पर कुछ शब्द या कहानियां दिखाई जाएंगी, कृपया विद्यार्थी को उन्हें पढ़ने को कहें।]]></string>
    <string name="teacher">शिक्षक</string>
    <string name="person_auth_screen"><u> मेंटर, शिक्षक, परीक्षक</u></string>
    <string name="fill_mobile_number">पंजीकृत मोबाइल नंबर भरें</string>
    <string name="number_not_registered">नंबर पंजीकृत नहीं है? </string>
    <string name="parent">अभिभावक</string>
    <string name="mentor">मेंटर</string>
    <string name="individual_student_result_fail">अभी इस विद्यार्थी को और मेहनत व निरंतर अभ्यास करने की ज़रुरत है</string>
    <string name="individual_student_result_fail_teacher">कृपया सूची अभ्यास के माध्यम से दक्षताओं पर विद्यार्थी का अभ्यास करायें।</string>
    <string name="spot_assessment_overview">Spot Assessment Overview</string>
    <string name="teacher_overview_title">अवलोकन पर आधारित सारांश </string>
    <string name="week">Week</string>
    <string name="select_week">Select Week</string>
    <string name="sync_now">डाटा अपलोड करें</string>
    <string name="reports">Reports</string>
    <string name="monthly_reports">Monthly Reports</string>
    <string name="visit_reports">Visit-Wise Reports</string>
    <string name="helpline_form">Helpline form</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="please_select_your_profile">कृपया अपनी प्रोफाइल चुनें</string>
    <string name="select_district_block">मूल्यांकन प्रक्रिया शुरू करने\nके लिए जनपद एवं ब्लॉक चुने</string>
    <string name="privacy_policy_title">प्राइवेसी पॉलिसी - निपुण लक्ष्य ऐप</string>
    <string name="nipun_lakshya_text">निपुण लक्ष्य</string>
    <string name="nipun_abhyas_text">निपुण अभ्यास</string>
    <string name="nipun_suchi_text">निपुण सूची\n(साप्ताहिक)</string>
    <string name="suchi_abhyas_text">सूची अभ्यास</string>
    <string name="title_assessment_with_given_competencies_one_student">अभ्यास इन लक्ष्यों पर होने जा रहा है -</string>
    <string name="title_assessment_with_given_competencies_multiple_students">विद्यार्थियों का आंकलन निम्नलिखित दक्षताओं पर होने जा रहा है</string>
    <string name="both_competency_button_title">भाषा व गणित निपुण लक्ष्यों का आंकलन एक साथ करें</string>
    <string name="warning_please_select_details_first">कृपया पहले दिए गए विकल्पों का चयन करें।</string>
    <string name="please_select_district_and_block_first">कृपया पहले जनपद और ब्लॉक का चयन करें</string>
    <string name="take_screenshot_of_next_screen_share_with_teacher">अगले स्क्रीन पर आने वाले स्कोर कार्ड के स्क्रीनशॉट को शिक्षक के साथ शेयर करें</string>
    <string name="wrong">ग़लत</string>
    <string name="correct">सही</string>
    <string name="nipun">सफल</string>
    <string name="not_nipun">असफल</string>
    <string name="nipun_lakshya_grade_">निपुण लक्ष्य: कक्षा </string>
    <string name="youAreNotUpdatedTitle">अपडेट उपलब्ध है</string>
    <string name="youAreNotUpdatedMessage">निपुण लक्ष्य एप्लिकेशन का एक नया संस्करण playstore पर उपलब्ध है। आगे बढ़ने के लिए कृपया एप्लिकेशन को अपडेट करें।</string>
    <string name="update">अपडेट</string>
    <string name="low_on_space_error">LowOnSpaceException</string>
    <string name="select_assessment_type_title">आप विद्यार्थी का आंकलन किस\nआधार पर करना चाहते हैं</string>
    <string name="final_ninun_lakshya_result_title">निपुण विद्यार्थी</string>
    <string name="nipun_vidyarthi">निपुण लक्ष्य</string>
    <string name="want_another_student_assessment">Do you want to proceed with assessment of another student?</string>
    <string name="start_assessment">Start Assessment</string>
    <string name="district_hindi">जनपद</string>
    <string name="block_hindi">ब्लॉक</string>
    <string name="nyay_panchayat_hindi">न्याय पंचायत</string>
    <string name="math">गणित</string>
    <string name="bhasha">भाषा</string>
    <string name="proceed_">आगे बढ़ें</string>
    <string name="school_information">विद्यालय सूची</string>
    <string name="visit_status">यात्रा की स्थिति</string>
    <string name="class_hindi">कक्षा</string>
    <string name="start_">शुरु करे</string>
    <string name="yes_hi">हाँ</string>
    <string name="no_hi">नहीं</string>
    <string name="select_district_first_prompt">कृपया पहले जनपद का चयन करें</string>
    <string name="select_block_first_prompt">कृपया पहले ब्लॉक चुनें</string>
    <string name="crash_error_message">नमस्ते! एक अप्रत्याशित तकनीकी समस्या हुई हैं। कृपया ऐप को फिर से शुरू करें ।</string>
    <string name="start_nipun_abhyas_for_next_student">अगले विद्यार्थी का अभ्यास करें ।</string>
    <string name="finish_assessment">आंकलन समाप्त करें।</string>
    <string name="go_ahead">आगे बढ़ें।</string>
    <string name="abhyas">अभ्यास</string>
    <string name="subject">विषय</string>
    <string name="please_select_drop_down_options">शुरू करने के लिए कृपया नीचे दिए गए विकल्पों में से चयन करें।</string>
</resources>