<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    android:background="#ffffff"
    tools:context=".ErrorActivity">

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginVertical="13dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/version_name_color"
        android:textSize="@dimen/version_name_size"
        tools:ignore="ContentDescription"
        tools:text="version name!" />

    <ImageView
        android:id="@+id/error_iv"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_weight="0.7"
        android:scaleType="fitCenter"
        android:layout_gravity="center_horizontal|bottom"
        android:src="@drawable/ic_warning_error"
        android:layout_marginTop="50dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.3">

        <TextView
            android:id="@+id/error_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oh_no"
            android:textColor="#CE353535"
            android:textSize="40sp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/errorMessage_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_textView"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:text="@string/crash_error_message"
            android:textAlignment="center"
            android:textColor="#A09F9F"
            android:textSize="17sp" />

        <Button
            android:id="@+id/restartApp_button"
            android:layout_width="260dp"
            android:layout_height="56dp"
            android:text="@string/let_s_start_again"
            style="@style/ButtonStyle1"
            android:layout_below="@id/errorMessage_textView"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            android:padding="8dp"
            android:textSize="16sp"
            android:layout_marginTop="15dp"/>


    </RelativeLayout>
</LinearLayout>
