<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mpp_background">

        <include
            android:id="@+id/include_toolbar"
            layout="@layout/include_toolbar_assessment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scroll_bar"
            style="@style/scrollbar_shape_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:scrollbarSize="5dp"
            app:layout_constraintBottom_toTopOf="@id/mtl_btn_1"
            app:layout_constraintTop_toBottomOf="@id/include_toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/school_info"
                    layout="@layout/student_information_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    style="@style/text_result_heading_extra_bold_style"
                    android:layout_marginBottom="@dimen/margin_extra_large"
                    android:gravity="center"
                    android:text="@string/assessment_compete"
                    app:layout_constraintBottom_toTopOf="@+id/tv_remarks"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/school_info"
                    app:layout_constraintVertical_chainStyle="packed" />

                <TextView
                    android:id="@+id/tv_remarks"
                    style="@style/titleViewLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginHorizontal="36dp"
                    android:layout_marginTop="@dimen/margin_extra_large"
                    android:gravity="center"
                    android:text="@string/completed_assessment_with_students"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_screenshot"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <TextView
                    android:id="@+id/tv_screenshot"
                    style="@style/titleViewLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="40dp"
                    android:gravity="center"
                    android:paddingHorizontal="20dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/completed_assessment_with_students" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mtl_btn_1"
            style="@style/button_long_style"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_24dp"
            app:layout_constraintBottom_toTopOf="@id/mtl_btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/margin_4dp"
            android:text="@string/start_nipun_abhyas_for_next_student" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mtl_btn_next"
            style="@style/button_long_style"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            app:layout_constraintBottom_toTopOf="@id/profile__footer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/finish_assessment" />


        <!--<com.google.android.material.button.MaterialButton
            android:id="@+id/mtl_btn_next"
            style="@style/button_long_style"
            android:layout_marginBottom="@dimen/margin_extra_large"
            android:text="@string/submit_result"
            app:layout_constraintBottom_toTopOf="@id/profile__footer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
-->
        <ImageView
            android:id="@+id/profile__footer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/footer_height"
            android:src="@drawable/mpp_card_footer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>